--- a/helix-db/Cargo.toml
+++ b/helix-db/Cargo.toml
@@ -27,6 +27,8 @@ flume = { version = "0.11.1", default-features = false, features = ["async", "se
 itertools = "0.14.0"
 tempfile = "3.20.0"
 paste = "1.0.15"
+rayon = "1.11.0"
+dashmap = "6.1.0"
 
 # compiler dependencies
 pest = { version = "2.7", optional = true }
