--- a/helix-container/Cargo.toml
+++ b/helix-container/Cargo.toml
@@ -22,5 +22,9 @@ tracing-subscriber = "0.3.20"
 tracing = "0.1.41"
 dotenvy = "0.15.7"
 
+[target.'cfg(not(target_env = "msvc"))'.dependencies]
+tikv-jemallocator = { version = "0.6.0", features = ["profiling", "unprefixed_malloc_on_supported_platforms"] }
+jemalloc_pprof = "0.8.1"
+
 [features]
 dev = ["helix-db/dev-instance"]
